# Termux-AppStore

./: .editorconfig  .gitignore  README.md  add-new-app.py  add-new-app.sh  appstore  changelog.md  gtk_app_store.py  org.sabamdarif.termux.appstore.desktop  requirements.txt  terminal_emulator.py
.github/: dependabot.yml
.github/scripts/: refresh_hashes.py  test_refresh_hashes.py  test_update_metadata.py  update_metadata.py  update_versions.sh
.github/workflows/: check-versions.yml  release.yml  update-metadata.yml
apps/Abiword/: description.txt  install.sh  uninstall.sh
apps/Alacritty/: description.txt  install.sh  uninstall.sh
apps/Alligator/: description.txt  install.sh  uninstall.sh
apps/Amberol/: description.txt  install.sh  uninstall.sh
apps/Antigravity/: description.txt  install.sh  uninstall.sh
apps/Atril/: category.txt  description.txt  install.sh  uninstall.sh
apps/Audacious/: description.txt  install.sh  uninstall.sh
apps/Audacity/: description  install.sh  uninstall.sh
apps/Audiotube/: description.txt  install.sh  uninstall.sh
apps/Blender/: description.txt  install.sh  uninstall.sh
apps/Blender4/: category.txt  install.sh  uninstall.sh
apps/Brave-browser/: description.txt  install.sh  uninstall.sh
apps/Calligra/: description.txt  install.sh  uninstall.sh
apps/Chromium/: install.sh  uninstall.sh
apps/Code-oss/: description  install.sh  uninstall.sh
apps/Cursor/: description.txt  install.sh  uninstall.sh
apps/Darktable/: description  install.sh  uninstall.sh
apps/Dconf-editor/: description.txt  install.sh  uninstall.sh
apps/Deadbeef/: description.txt  install.sh  uninstall.sh
apps/Dosbox/: description.txt  install.sh  uninstall.sh
apps/Dosbox-x/: description.txt  install.sh  uninstall.sh
apps/Evince/: description.txt  install.sh  uninstall.sh
apps/Extension-manager/: description.txt  install.sh  uninstall.sh
apps/Eye-of-gnome/: description.txt  install.sh  uninstall.sh
apps/Fastfetch/: description  install.sh  uninstall.sh
apps/Feathernotes/: description.txt  install.sh  uninstall.sh
apps/Firefox/: description.txt  install.sh  uninstall.sh
apps/Flameshot/: description.txt  install.sh  uninstall.sh
apps/Fontforge-gtk/: description.txt  install.sh  uninstall.sh
apps/Freetube/: description.txt  install.sh  uninstall.sh
apps/GIMP/: description  install.sh  uninstall.sh
apps/Gedit/: category.txt  description  install.sh  uninstall.sh
apps/Git/: category  description  install.sh  uninstall.sh
apps/Git-gui/: description.txt  install.sh  uninstall.sh
apps/Github-Desktop/: description  install.sh  uninstall.sh
apps/Gnome-calculator/: description.txt  install.sh  uninstall.sh
apps/Gnome-font-viewer/: description.txt  install.sh  uninstall.sh
apps/Gwenview/: category.txt  description.txt  install.sh  uninstall.sh
apps/Handbrake/: description.txt  install.sh  uninstall.sh
apps/Hangover/: category.txt  description  install.sh  uninstall.sh
apps/Hexchat/: description.txt  install.sh  uninstall.sh
apps/Inkscape/: description  install.sh  uninstall.sh  uninstalll.sh
apps/Kate/: description.txt  install.sh  uninstall.sh
apps/Kdenlive/: category.txt  description  install.sh  uninstall.sh
apps/Kget/: description.txt  install.sh  uninstall.sh
apps/Kig/: description.txt  install.sh  uninstall.sh
apps/Konsole/: description.txt  install.sh  uninstall.sh
apps/Kvantum/: description.txt  install.sh  uninstall.sh
apps/Lazygit/: description.txt  install.sh  uninstall.sh
apps/Leafpad/: description.txt  install.sh  uninstall.sh
apps/LibreOffice/: category.txt  description  install.sh  uninstall.sh
apps/Libreoffice/: description.txt  install.sh  uninstall.sh
apps/Librewolf/: description.txt  install.sh  uninstall.sh
apps/Linuxthemestore/: description.txt  install.sh  uninstall.sh
apps/Luanti/: description.txt  install.sh  uninstall.sh
apps/Lximage-qt/: description.txt  install.sh  uninstall.sh
apps/Morphosis/: description.txt  install.sh  uninstall.sh
apps/Mousepad/: category.txt  description.txt  install.sh  uninstall.sh
apps/Mpv/: description.txt  install.sh  uninstall.sh
apps/Msedit/: category.txt  description.txt  install.sh  uninstall.sh
apps/Neofetch/: description  install.sh  uninstall.sh
apps/Neovim/: install.sh  uninstall.sh
apps/Nvchad/: description.txt  install.sh  uninstall.sh
apps/Obs-studio/: category.txt  description.txt  install.sh  uninstall.sh
apps/Obsidian/: category.txt  install.sh  uninstall.sh
apps/OrcaSlicer/: description.txt  install.sh  uninstall.sh
apps/Pokemon-Romhack-Dev-Tools/: category.txt  description.txt  install.sh  uninstall.sh
apps/Pwasforfirefox/: description.txt  install.sh  uninstall.sh
apps/Qbittorrent/: category.txt  description.txt  install.sh  uninstall.sh
apps/Quassel/: description.txt  install.sh  uninstall.sh
apps/Rawtherapee/: description.txt  install.sh  uninstall.sh
apps/Rclone/: description.txt  install.sh  (+1 more)
appstore/: appstore  gtk_app_store.py  meson.build  meson_options.txt  org.sabamdarif.termux.appstore.desktop  requirements.txt  terminal_emulator.py  termux-appstore
appstore/data/: org.sabamdarif.termux.appstore.desktop.in
appstore/inbuild_functions/: inbuild_functions
appstore/style/: style.css  terminal_style.css
appstore/termux-packages/: build.sh
appstore/termux_appstore/: __init__.py  __main__.py  _buildconf.py.in  application.py  constants.py  fuzzysearch.py  main.py  utils.py  window.py
appstore/termux_appstore/backend/: __init__.py  app_data.py  distro.py  installed_apps.py  refresh.py  script_runner.py  settings.py  updates.py
appstore/termux_appstore/tasks/: __init__.py  progress.py  script_executor.py  task_manager.py  update_check.py
appstore/termux_appstore/terminal/: __init__.py  ansi_parser.py  command_runner.py  emulator.py
appstore/termux_appstore/ui/: __init__.py  app_card.py  dialogs.py  header.py  search.py  sidebar.py
data/: apps.json
inbuild_functions/: inbuild_functions
src/: gtk_app_store.py  org.sabamdarif.termux.appstore.desktop
style/: style.css
(+102 files in other folders)
